samples/_failures_safe/1761212163_2d3f9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33e17ee6.c: In function ‘main’:
./samples/SAFE/__tmp_33e17ee6.c:156:16: error: missing terminating " character
  156 |         printf("Enter
      |                ^~~~~~
./samples/SAFE/__tmp_33e17ee6.c:156:9: error: expected expression at end of input
  156 |         printf("Enter
      |         ^~~~~~
./samples/SAFE/__tmp_33e17ee6.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33e17ee6.c:156:9: error: expected declaration or statement at end of input
